Update food promotion images to use object-fit: contain to prevent cropping

--- a/style.css
+++ b/style.css
@@ -917,7 +917,7 @@ img {
 .promo-custom-img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 .promo-deco-leaf {
